
[workspace]
resolver = "2"
members = [
    "crates/*",
    "contracts/*",
    "examples/increment",
    "examples/errors",
    "examples/cross_contract/*",
    "examples/increment-init",
]

exclude = [
    # "crates/smartdeploy-macros",
    # "crates/smartdeploy-sdk",
    "contracts/*",
    "examples/increment",
    "examples/errors",
    "examples/cross_contract/*",
]

[profile.release-with-logs]
inherits = "release"
debug-assertions = true

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[workspace.dependencies]
smartdeploy-sdk = { path = "./crates/smartdeploy-sdk" }
smartdeploy-macros = { path = "./crates/smartdeploy-macros" }
# loam-sdk = { path = "../../loam/crates/loam-sdk" }
# loam-subcontract-core = { path = "../../loam/crates/loam-core" }
# loam-subcontract-core= "0.7.0"
loam-subcontract-core = { git = "https://github.com/loambuild/loam-sdk", rev = "ec4c08c772d21fe21f1a235c9b321c0e675c3f9c" }
# loam-sdk = "0.6.8"
loam-sdk = { git = "https://github.com/loambuild/loam-sdk", rev = "ec4c08c772d21fe21f1a235c9b321c0e675c3f9c" }
clap = { version = "4.1.8", features = [
    "derive",
    "env",
    "deprecated",
    "string",
] }
thiserror = "1.0.31"
serde = "1.0.82"
serde_derive = "1.0.82"
serde_json = "1.0.82"
serde-aux = "4.1.2"
hex = "0.4.3"
num-bigint = "0.4"
tokio = { version = "1", features = ["full"] }
soroban-cli = "20.2.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
