[package]
name = "core-subcontract"
description = "Example of Redeployable Contract"
version = "0.1.0"
authors = ["Stellar Development Foundation <info@stellar.org>"]
license = "Apache-2.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
loam-sdk = { workspace = true, features = ["loam-soroban-sdk"] }
smartdeploy-sdk = { path = "../../crates/smartdeploy-sdk", version = "0.1.5" }


[dev-dependencies]
loam-sdk = { workspace = true, features = ["soroban-sdk-testutils"] }

[package.metadata.loam]
contract = true
