[package]
name = "smartdeploy-cli"
description = "Smartdeploy CLI"
authors = ["Willem Wyndham <willem@ahalabs.dev>"]
license = "Apache-2.0"
readme = "../../README.md"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
autobins = false
default-run = "smartdeploy"

[[bin]]
name = "smartdeploy"
path = "src/bin/main.rs"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ version }-{ target }{ archive-suffix }"
bin-dir = "{ bin }{ binary-ext }"


[lib]
name = "smartdeploy_cli"
path = "src/lib.rs"
doctest = false

[dependencies]
# soroban-cli = { git = "https://github.com/stellar/soroban-tools", rev = "7d3b4175b1970f76455b4789797c2edc5f79e432" }
#soroban-cli = { path = "../../../soroban-cli/cmd/soroban-cli" }
soroban-cli = "20.0.0-rc1"
clap = { version = "4.1.8", features = [
    "derive",
    "env",
    "deprecated",
    "string",
] }

thiserror = "1.0.31"
tokio = { version = "1", features = ["full"] }
shlex = "1.1.0"
smartdeploy-build = { path = "../smartdeploy-build", version = "0.1.0" }

[dev-dependencies]
assert_cmd = "2.0.4"
assert_fs = "1.0.7"
predicates = "2.1.5"
