[package]
name = "smartdeploy-cli"
description = "Smartdeploy CLI"
authors = ["Willem Wyndham <willem@ahalabs.dev>"]
license = "Apache-2.0"
readme = "../../README.md"
version = "0.5.1"
edition = "2021"
rust-version = "1.70"
autobins = false
default-run = "smartdeploy"

[[bin]]
name = "smartdeploy"
path = "src/bin/main.rs"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ version }-{ target }{ archive-suffix }"
bin-dir = "{ bin }{ binary-ext }"


[lib]
name = "smartdeploy_cli"
path = "src/lib.rs"
doctest = false

[dependencies]
# soroban-cli = { git = "https://github.com/stellar/soroban-tools", rev = "b5b0b786d1900382335e76563d6deb7348503493" }
#soroban-cli = { path = "../../../soroban-cli/cmd/soroban-cli" }
#soroban-cli = {package = "loam-soroban-cli", version = "20.0.0-rc3" }
soroban-cli = "20.1.1"
clap = { version = "4.1.8", features = [
    "derive",
    "env",
    "deprecated",
    "string",
] }

thiserror = "1.0.31"
tokio = { version = "1", features = ["full"] }
shlex = "1.1.0"
smartdeploy-build = { path = "../smartdeploy-build", version = "0.2.1" }
loam-sdk = { workspace = true }
soroban-spec = "20.0.3"
soroban-spec-tools = "20.1.1"
heck = "0.4.1"
ed25519-dalek = "2.0.0"
stellar-strkey = "0.0.8"
dotenvy = "0.15.7"
