[package]
name = "smartdeploy-macros"
description = "Smartdeploy macros"
readme = "../../README.md"
license = "Apache-2.0"
version.workspace = true
edition = "2021"
rust-version = "1.69"

[lib]
proc-macro = true
doctest = false

[dependencies]

syn = {version="2.0",features=["full"]}
quote = "1.0"
proc-macro2 = "1.0"
