[package]
name = "smartdeploy-macros"
description = "Smartdeploy macros"
readme = "../../README.md"
license = "Apache-2.0"
version = "0.1.0"
edition = "2021"
rust-version = "1.69"

[lib]
proc-macro = true
doctest = false

[dependencies]
quote = "1.0"
syn = "2.0.37"
smartdeploy-build = { path = "../smartdeploy-build", version = "0.1.0" }
stellar-strkey = "0.0.7"