[package]
name = "smartdeploy-sdk"
description = "SmartDeploy SDK helps ensure soroban contracts can be redeployed"
edition = "2021"
version.workspace = true

[lib]
crate-type = ["rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smartdeploy-macros = { workspace = true }