[package]
name = "smartdeploy-sdk"
description = "SmartDeploy SDK helps ensure soroban contracts can be redeployed"
edition = "2021"
readme = "../../README.md"
license = "Apache-2.0"
version = "0.1.1"

[lib]
crate-type = ["rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smartdeploy-macros = { path = "../smartdeploy-macros", version = "0.1.1" }
