[package]
name = "smartdeploy"
version = "0.0.0"
authors = ["Stellar Development Foundation <info@stellar.org>"]
license = "Apache-2.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
loam-sdk = { workspace = true }
loam-sdk-core-riffs = { workspace = true }

[dev_dependencies]
loam-sdk = { workspace = true, features = ["soroban-sdk-testutils"] }
