[package]
name = "soroban-deployer-contract"
version = "0.0.0"
authors = ["Stellar Development Foundation <info@stellar.org>"]
license = "Apache-2.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = { package = "loam-soroban-sdk", version = "0.6.10" }
loam-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { package = "loam-soroban-sdk", version = "0.6.10", features = [
    "testutils",
] }


[package.metadata.loam]
contract = true
